--- a/app/src/main/res/menu/settings_privacy_info_menu.xml
+++ b/app/src/main/res/menu/settings_privacy_info_menu.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menuShowInfo"
-        android:title="@string/Welcome_PrivacySettings"
-        android:icon="@drawable/ic_info"
+        android:id="@+id/closeButton"
+        android:title="@string/Alert_Close"
         app:showAsAction="always" />
 
 </menu>
