--- a/app/src/main/res/navigation/intro_graph.xml
+++ b/app/src/main/res/navigation/intro_graph.xml
@@ -6,7 +6,6 @@
     app:startDestination="@id/introFragment">
 
     <include app:graph="@navigation/privacy_settings_graph" />
-    <include app:graph="@navigation/restore_graph" />
 
     <fragment
         android:id="@+id/introFragment"
@@ -28,13 +27,18 @@
             android:id="@+id/welcomeFragment_to_privacySettingsFragment"
             app:destination="@id/privacy_settings_graph" />
         <action
-            android:id="@+id/welcomeFragment_to_restoreFragment"
-            app:destination="@id/restore_graph" />
+            android:id="@+id/welcomeFragment_to_restoreActivity"
+            app:destination="@id/activityRestore" />
     </fragment>
 
     <fragment
         android:id="@+id/welcomeCreateWalletFragment"
         android:name="io.horizontalsystems.bankwallet.modules.createwallet.CreateWalletFragment"
         tools:layout="@layout/manage_wallets_fragment" />
+
+    <activity
+        android:id="@+id/activityRestore"
+        android:name="io.horizontalsystems.bankwallet.modules.restore.RestoreActivity"
+        tools:layout="@layout/activity_restore" />
 
 </navigation>
