--- a/app/src/main/res/layout/fragment_bottom_sync_error.xml
+++ b/app/src/main/res/layout/fragment_bottom_sync_error.xml
@@ -5,21 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="16dp">
-    
+
     <Button
         android:id="@+id/retryBtn"
         style="@style/ButtonPrimaryYellow"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:text="@string/BalanceSyncError_ButtonRetry"
-        app:layout_constraintBottom_toTopOf="@+id/changeSourceBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/changeSourceBtn"
