--- a/app/src/main/res/layout/fragment_settings_security.xml
+++ b/app/src/main/res/layout/fragment_settings_security.xml
@@ -40,6 +40,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 app:icon="@drawable/ic_passcode"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/privacy"
                 app:title="@string/SettingsSecurity_EnablePin" />
 
@@ -60,6 +62,8 @@
                 android:layout_marginTop="32dp"
                 app:bottomBorder="true"
                 app:icon="@drawable/ic_fingerprint"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/changePin"
                 app:title="@string/SettingsSecurity_Biometric_Authentication" />
 
