fix biometric authentication text not overlap

--- a/components/views/src/main/res/layout/view_settings_left.xml
+++ b/components/views/src/main/res/layout/view_settings_left.xml
@@ -1,17 +1,9 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:layout_height="44dp"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
-
-    <View
-        android:id="@+id/topShade"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/steel_20"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_width="match_parent"
+    android:layout_height="44dp">
 
     <ImageView
         android:id="@+id/settingsIcon"
@@ -25,7 +17,7 @@
 
     <TextView
         android:id="@+id/settingsTitle"
-        style="@style/Body"
+        style="@style/Subhead1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -49,4 +41,4 @@
         app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
         tools:text="Subtitle" />
 
-</merge>
+</androidx.constraintlayout.widget.ConstraintLayout>
