--- a/components/views/src/main/res/layout/view_settings_item.xml
+++ b/components/views/src/main/res/layout/view_settings_item.xml
@@ -8,12 +8,21 @@
     android:minHeight="44dp"
     tools:layout_height="44dp">
 
+    <View
+        android:id="@+id/topShade"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/steel_20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!-- Cell Left -->
 
     <include
         layout="@layout/view_settings_left"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
