--- a/components/views/src/main/res/layout/view_key_input.xml
+++ b/components/views/src/main/res/layout/view_key_input.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/input_background_themed"
     android:paddingStart="12dp"
-    android:paddingEnd="8dp"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
+    android:paddingEnd="8dp">
 
     <LinearLayout
         android:id="@+id/addressInputWrapper"
@@ -50,4 +49,4 @@
 
     </LinearLayout>
 
-</merge>
+</androidx.constraintlayout.widget.ConstraintLayout>
