--- a/app/src/main/res/layout/view_input_with_buttons.xml
+++ b/app/src/main/res/layout/view_input_with_buttons.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/title"
@@ -123,4 +122,4 @@
         app:layout_constraintTop_toBottomOf="@+id/barrierBottom"
         tools:text="Your Transaction will revert if the price change unfavorably by more than this percentage" />
 
-</merge>
+</androidx.constraintlayout.widget.ConstraintLayout>
