--- a/components/chartview/src/main/res/layout/view_chart.xml
+++ b/components/chartview/src/main/res/layout/view_chart.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coinChartView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
+    android:paddingEnd="16dp">
 
     <io.horizontalsystems.chartview.ChartView
         android:id="@+id/chartMain"
@@ -64,4 +62,4 @@
         android:gravity="center"
         android:textColor="@color/red_d" />
 
-</merge>
+</androidx.constraintlayout.widget.ConstraintLayout>
