--- a/components/views/src/main/res/layout/view_settings_left.xml
+++ b/components/views/src/main/res/layout/view_settings_left.xml
@@ -21,6 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:ellipsize="end"
+        android:maxEms="12"
+        android:maxLines="1"
         android:textColor="?TextColorBarsToDark"
         app:layout_constraintBottom_toTopOf="@+id/settingsSubtitle"
         app:layout_constraintStart_toEndOf="@+id/settingsIcon"
