--- a/components/views/src/main/res/layout/view_settings_left.xml
+++ b/components/views/src/main/res/layout/view_settings_left.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/settingsTitle"
-        style="@style/Subhead1"
+        style="@style/Body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
