replace match_parent with 0dp

--- a/app/src/main/res/layout/constraint_layout_with_header.xml
+++ b/app/src/main/res/layout/constraint_layout_with_header.xml
@@ -82,10 +82,10 @@
 
     <ViewStub
         android:id="@+id/content"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/border1"/>
+        app:layout_constraintTop_toBottomOf="@+id/border1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
