--- a/app/src/main/res/layout/fragment_bottom_selector.xml
+++ b/app/src/main/res/layout/fragment_bottom_selector.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/textWarning"
         style="@style/ImportantText"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="16dp"
