--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -36,8 +36,8 @@
 
     <View
         android:id="@+id/screenSecureDim"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="?ColorGwen"
         android:visibility="gone" />
 
