--- a/components/keystore/src/main/res/layout/activity_keystore.xml
+++ b/components/keystore/src/main/res/layout/activity_keystore.xml
@@ -7,8 +7,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/noSystemLockWarning"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:visibility="gone">
 
         <ImageView
@@ -19,7 +19,7 @@
             android:src="@drawable/ic_attention_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView"
