--- a/components/views/src/main/res/layout/fragment_keyboard_alert_dialog.xml
+++ b/components/views/src/main/res/layout/fragment_keyboard_alert_dialog.xml
@@ -26,7 +26,7 @@
     <TextView
         android:id="@+id/txtDescription"
         style="@style/Subhead2"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
@@ -42,7 +42,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/buttonWrapper"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,9 +50,9 @@
 
         <TextView
             android:id="@+id/skipButtonTextView"
+            style="@style/Headline2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Headline2"
             android:paddingStart="6dp"
             android:paddingTop="16dp"
             android:paddingEnd="6dp"
@@ -69,10 +69,10 @@
 
         <TextView
             android:id="@+id/selectButtonTextView"
+            style="@style/Headline2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            style="@style/Headline2"
             android:paddingStart="6dp"
             android:paddingTop="16dp"
             android:paddingEnd="6dp"
