--- a/app/src/main/res/layout/fragment_add_token.xml
+++ b/app/src/main/res/layout/fragment_add_token.xml
@@ -214,7 +214,7 @@
             <TextView
                 android:id="@+id/warningText"
                 style="@style/ImportantText"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@string/AddToken_CoinAlreadyInListWarning"
@@ -227,12 +227,11 @@
             <Button
                 android:id="@+id/btnAddToken"
                 style="@style/ButtonPrimaryYellow"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="28dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="12dp"
                 android:text="@string/Button_Add"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@id/guidelineRight"
