--- a/app/src/main/res/layout/fragment_backup_eos.xml
+++ b/app/src/main/res/layout/fragment_backup_eos.xml
@@ -30,13 +30,14 @@
                 style="@style/Subhead2"
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
+                android:gravity="fill"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
-                android:gravity="fill"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:text="@string/Backup_Eos_AccountName"
                 android:textColor="@color/grey"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,6 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/accountName" />
 
@@ -54,14 +56,15 @@
                 style="@style/Subhead2"
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
-                android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="24dp"
                 android:gravity="fill"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:text="@string/Backup_Eos_ActivePrivateKey"
                 android:textColor="@color/grey"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/eosAccount" />
 
@@ -71,6 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/privateKey" />
 
@@ -79,11 +83,12 @@
                 style="@style/Subhead2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:text="@string/Backup_Eos_Warning"
                 android:textColor="@color/grey"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/eosActivePrivateKey" />
 
