--- a/app/src/main/res/layout/fragment_bottom_manage_wallets.xml
+++ b/app/src/main/res/layout/fragment_bottom_manage_wallets.xml
@@ -9,17 +9,17 @@
     <TextView
         android:id="@+id/addKeyInfo"
         style="@style/Subhead2"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
         android:textColor="@color/grey"
+        app:layout_constraintBottom_toTopOf="@+id/createBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/createBtn"
         tools:text="@string/AddCoin_Description" />
 
     <Button
