--- a/app/src/main/res/layout/fragment_confirmation_dialog.xml
+++ b/app/src/main/res/layout/fragment_confirmation_dialog.xml
@@ -9,14 +9,14 @@
     <TextView
         android:id="@+id/contentText"
         style="@style/ImportantText"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnYellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/btnYellow"
         tools:text="@string/AddCoin_Description" />
 
     <Button
