--- a/app/src/main/res/layout/fragment_swap_approve.xml
+++ b/app/src/main/res/layout/fragment_swap_approve.xml
@@ -28,18 +28,17 @@
             <TextView
                 android:id="@+id/approveInfo"
                 style="@style/ImportantText"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
                 android:text="@string/Approve_Info"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:id="@+id/amountWrapper"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
@@ -50,6 +49,8 @@
                 android:paddingTop="13dp"
                 android:paddingEnd="12dp"
                 android:paddingBottom="12dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/approveInfo">
 
                 <EditText
@@ -101,12 +102,11 @@
             <Button
                 android:id="@+id/btnApprove"
                 style="@style/ButtonPrimaryYellow"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="28dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
                 android:text="@string/Button_Approve"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
