--- a/app/src/main/res/layout/fragment_terms_settings.xml
+++ b/app/src/main/res/layout/fragment_terms_settings.xml
@@ -151,7 +151,7 @@
 
             <View
                 android:id="@+id/dividerBottom"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0.5dp"
                 android:layout_marginTop="32dp"
                 android:background="@color/steel_20"
