--- a/app/src/main/res/layout/view_confirmation_primary_item_view.xml
+++ b/app/src/main/res/layout/view_confirmation_primary_item_view.xml
@@ -102,15 +102,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/memoLayout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/receiverView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:visibility="visible"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/receiverView"
+        tools:visibility="visible">
 
         <View
             android:id="@+id/border3"
