--- a/app/src/main/res/layout/view_confirmation_secondary_item_view.xml
+++ b/app/src/main/res/layout/view_confirmation_secondary_item_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
