--- a/app/src/main/res/layout/view_holder_coin_rate.xml
+++ b/app/src/main/res/layout/view_holder_coin_rate.xml
@@ -93,7 +93,7 @@
         tools:text="$400" />
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0.5dp"
         android:background="@color/steel_20"
         app:layout_constraintBottom_toBottomOf="parent" />
