--- a/app/src/main/res/layout/view_holder_empty_screen.xml
+++ b/app/src/main/res/layout/view_holder_empty_screen.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/emptyListText"
         style="@style/Subhead2"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
         android:paddingStart="48dp"
