--- a/app/src/main/res/layout/view_holder_swap_coin_select.xml
+++ b/app/src/main/res/layout/view_holder_swap_coin_select.xml
@@ -74,7 +74,7 @@
 
     <View
         android:id="@+id/bottomShade"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0.5dp"
         android:background="@color/steel_20"
         android:visibility="gone"
