--- a/app/src/main/res/layout/view_send_fee.xml
+++ b/app/src/main/res/layout/view_send_fee.xml
@@ -129,10 +129,11 @@
 
             <View
                 android:id="@+id/border1"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0.5dp"
                 android:background="@color/steel_20"
                 app:layout_constraintBottom_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
