--- a/app/src/main/res/layout/view_settings_item_arrow.xml
+++ b/app/src/main/res/layout/view_settings_item_arrow.xml
@@ -10,7 +10,7 @@
 
     <View
         android:id="@+id/topShade"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0.5dp"
         android:background="@color/steel_20"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
 
     <View
         android:id="@+id/bottomBorder"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0.5dp"
         android:background="@color/steel_20"
         app:layout_constraintBottom_toBottomOf="parent" />
