--- a/components/views/src/main/res/layout/fragment_alert_dialog.xml
+++ b/components/views/src/main/res/layout/fragment_alert_dialog.xml
@@ -42,7 +42,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/buttonWrapper"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
