--- a/components/views/src/main/res/layout/view_manage_account_view.xml
+++ b/components/views/src/main/res/layout/view_manage_account_view.xml
@@ -7,7 +7,7 @@
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0.5dp"
         android:background="@color/steel_20"
         app:layout_constraintTop_toTopOf="parent" />
